# connect-4-minimax

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
exceptions/: column_full_exception.h  column_out_of_range_exception.h
game/: game.cpp  game.h
interfaces/: abstract_player.h  abstract_playfield.h  player_t.h
minimax/: minimax.cpp  minimax.h  minimax_playfield.cpp  minimax_playfield.h
player/: player.cpp  player.h
playfield/: playfield.cpp  playfield.h
